--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
         let number = document.getElementById("number");
         number.addEventListener("click", add)
-        document.addEventListener('keyup', (event) => {
+        document.addEventListener('keyup', (testingye) => {
             if(event.key == "Enter"){
                 add()
             }
