--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <h1 class="animate__animated animate__bounce">Multiply numbers!</h1>
+    Updated
     <input type="text" name = "input_field" type="string" id="box">
     <tr>
     <input type="text" name = "input_field_2" type="string" id="multipler">
