--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 <body>
     <h1 class="animate__animated animate__bounce">Multiply numbers!</h1>
-    Updated
     <input type="text" name = "input_field" type="string" id="box">
     <tr>
     <input type="text" name = "input_field_2" type="string" id="multipler">
@@ -42,7 +41,7 @@
         }
         let number = document.getElementById("number");
         number.addEventListener("click", add)
-        document.addEventListener('keyup', (testingye) => {
+        document.addEventListener('keyup', (event) => {
             if(event.key == "Enter"){
                 add()
             }
