--- a/index.html
+++ b/index.html
@@ -15,19 +15,32 @@
 </head>
 <body>
     <h1 class="animate__animated animate__bounce">Multiply numbers!</h1>
-    <input type="text" name = "input_field" type="string" id="box">
-    <tr>
-    <input type="text" name = "input_field_2" type="string" id="multipler">
-</tr>
-    <input style="background-color: rgba(0, 96, 116, 0.341)" type="button" value = "calculate" id="number"/>
+    <p>
+    <!--  <img class="picture" src="Elon2.png" style="float:right;width: 500px;" alt="This is Elon Musk 'poor internet connection'"/>  -Future me do something about this -->  
+    <input style="color: rgba(0, 11, 217, 0.969); text-shadow: 1px 1px #dce7e8; background-image: url('input-background.png'); background-size: 300%;" type="text" name = "input_field" type="string" id="box">
+
+    <input style="color: rgba(0, 11, 217, 0.969); text-shadow: 1px 1px #dce7e8; background-image: url('input-background.png'); background-size: 500%;" stype="text" name = "input_field_2" type="string" id="multipler">
+
+    <input style="background-color:rgba(140, 224, 223, 0.943)" type="button" value = "calculate" id="number"/>
     <br>
 
     <h3><output type="text" name = "text_field" type="string" id="result"></h3>
-    <h2>Work in progress</h2>
     <audio controls>
-        <source src="Songs of War OST - Ataraxia.mp3">
+        <source src="Calculating noises.mp3">
     </audio>
-
+    </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>Work in progress</h2>
 </body>
     
 
