--- a/index.html
+++ b/index.html
@@ -38,50 +38,7 @@
     <br>
     <br>
     <h2>Work in progress</h2>
-
-    <script>
-        document.getElementById('weatherInfo').innerText = "Weather:"
-        document.getElementById('result').value = 'result:';
-        function add() {
-            let number = parseFloat(document.getElementById("box").value);
-            let multiplier = parseFloat(document.getElementById("multipler").value);
-            let result = number * multiplier;
-            document.getElementById("result").value = "result:" + result;
-        }
-        let calculateButton = document.getElementById("number");
-        calculateButton.addEventListener("click", add);
-        document.addEventListener('keyup', (event) => {
-            if (event.key == "Enter") {
-                add();
-            }
-        });
-
-        function getWeather() {
-            const apiKey = '8216f6e872dec38b0b49b3875a9991e2';
-            const city = document.getElementById('cityInput').value;
-
-            fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`)
-                .then((response) => response.json())
-                .then((data) => {
-                    const temperature = data.main.temp;
-                    const description = data.weather[0].description;
-                    const weatherInfo = `Temperature: ${temperature}°C, Description: ${description}`;
-
-                    document.getElementById('weatherInfo').innerText = "Weather: " + weatherInfo;
-                })
-                .catch((error) => {
-                    console.log('Error:', error);
-                    document.getElementById('weatherInfo').innerText = 'Failed to retrieve weather data. Check your spelling.';
-                });
-        }
-
-        document.getElementById('getWeatherButton').addEventListener('click', getWeather);
-        document.getElementById('cityInput').addEventListener('keyup', function(event) {
-            if (event.key === 'Enter') {
-                getWeather();
-            }
-        });
-
-    </script>
+    
+    <script src="your-script.js"></script>
 </body>
 </html>
