--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <br>
     <h2>Work in progress</h2>
     
-    <script src="your-script.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
